# kermac-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cutensor/: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/01-simple/: CMakeLists.txt  main.cu
examples/02-dynamic-memory/: CMakeLists.txt  main.cu
examples/03-multi-stream/: CMakeLists.txt  main.cu
examples/04-multi-stream-allocation/: CMakeLists.txt  main.cu
examples/cublas-simple-gemm/: CMakeLists.txt  cublas_simple_gemm.cu
examples/cusolver-simple-syevd/: CMakeLists.txt  cusolver_simple_syevd.cu
examples/cutensor-simple-contraction/: CMakeLists.txt  cutensor_simple_contraction.cu
examples/simple/: CMakeLists.txt  simple.cu
kermac/: k_memory.cuh  k_multitensor.cuh  k_philox.cuh  kermac.cuh
kermac-cublas/: CMakeLists.txt  kermac_cublas.cuh
kermac-cusolver/: CMakeLists.txt  kermac_cusolver.cuh
kermac-cutensor/: CMakeLists.txt  kermac_cutensor.cuh
src/: CMakeLists.txt  k_common.cuh  k_multitensor.cuh  k_tensor.cuh
src/include/: philox.cuh
